--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,35 +15,26 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)       
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)     
 
+# Engine
+add_subdirectory(Sago)
 
-set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Sego/src)
-set(INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/Sego/include)
 
-file(GLOB_RECURSE HEADERS CONFIGURE_DEPENDS
-    "${INCLUDE_DIR}/*.h"
-    "${INCLUDE_DIR}/*.hpp"
-    "${INCLUDE_DIR}/*.hxx"
-)
 
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+add_executable(${PROJECT_NAME})
+
+set(SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/main)
 set(SOURCES)
 file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
   "${SOURCE_DIR}/*.cpp"
 )
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-add_executable(${PROJECT_NAME})
-
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
-target_sources(${PROJECT_NAME} PRIVATE ${HEADERS})
-
-target_include_directories(${PROJECT_NAME} PUBLIC
-  $<BUILD_INTERFACE:${INCLUDE_DIR}>  # 构建时包含
-  # $<INSTALL_INTERFACE:include>       # 安装后包含（可选）
-)
 
 find_package(Vulkan REQUIRED)
-target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan)
+target_link_libraries(${PROJECT_NAME} PRIVATE Vulkan::Vulkan
+SG_Core
+)
 
 
 
