--- a/Sago/drivers/CMakeLists.txt
+++ b/Sago/drivers/CMakeLists.txt
@@ -1,22 +1,21 @@
 macro(add_core_module MODULE_NAME)
     file(GLOB MODULE_SOURCES "${MODULE_NAME}/*.cpp" "${MODULE_NAME}/*.c")
-    list(APPEND CORE_SOURCES ${MODULE_SOURCES})
+    list(APPEND DRIVER_SOURCES ${MODULE_SOURCES})
 endmacro()
 
-add_core_module(io/log)
-add_core_module(util)
+add_core_module(vulkan)
 
-add_library(SG_Core  STATIC 
-${CORE_SOURCES})
+add_library(SG_Driver  STATIC 
+${DRIVER_SOURCES})
 
-if(NOT CORE_SOURCES)
+if(NOT DRIVER_SOURCES)
     message(FATAL_ERROR "No source files found in ${CMAKE_CURRENT_SOURCE_DIR}/io")
 endif()
 
-target_include_directories(SG_Core PUBLIC
+target_include_directories(SG_Driver PUBLIC
     ${CMAKE_CURRENT_SOURCE_DIR}/..
 )
 
 find_package(Vulkan REQUIRED)
-target_link_libraries(SG_Core PRIVATE Vulkan::Vulkan)
+target_link_libraries(SG_Driver PRIVATE Vulkan::Vulkan)
 
