Sdl Framwok Update

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,7 +38,10 @@ file(GLOB_RECURSE SOURCES
 target_sources(${PROJECT_NAME} PRIVATE ${SOURCES})
 
 target_link_libraries(${PROJECT_NAME} PRIVATE 
-SG_Core SG_Driver SG_Platform)
+SG_Core 
+SG_Driver
+SG_Platform
+)
 
 
 
