--- a/Sago/CMakeLists.txt
+++ b/Sago/CMakeLists.txt
@@ -34,6 +34,7 @@ add_engine_module(drivers/vulkan/extensions)
 add_engine_module(drivers/vulkan/pipelines)
 add_engine_module(drivers/vulkan/pipelines/shaders)
 add_engine_module(drivers/vulkan/renderpass)
+add_engine_module(drivers/vulkan/command)
 
 
 #context
