--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = https://github.com/libsdl-org/SDL
 [submodule "3rdparty/imgui"]
 	path = 3rdparty/imgui
-	url = https://github.com/ocornut/imgui
+	url = https://github.com/kabosusang/imgui-vk-sdl3.git
 [submodule "3rdparty/volk"]
 	path = 3rdparty/volk
 	url = https://github.com/zeux/volk
